# creol_logging

./: .gitignore  AUTHORS  Creol.ml  Creol.mli  Creol.mll  Creol.mly  CreolIO.ml  CreolIO.mli  CreolLex.mli  Driver.ml  INSTALL  Makefile  Makefile.am  NEWS  QUOTES  README  README-alpha  README-git  README-svn  TODO  configure.ac  creol-mode.el  creol.ml  creol.mli  creol.mll  creol.mly  creolbug.in  creolshell.in  creoltools.spec  creoltools.spec.in  maude-mode.el  maude-sh  menhir-sh
creol-mode/: NEWS  configure.ac  creol-mode-init.el  creol-mode.el  creol-mode.spec
creolc/: BackendCreol.ml  BackendCreol.mli  BackendDot.ml  BackendMaude.ml  BackendXML.ml  CMCDisplay.ml  CMCParser.ml  CMCValid.ml  CheckUseDef.ml  Config.ml  Creol.ml  Creol.mli  Creol.mll  Creol.mly  CreolCommon.mly  CreolIO.ml  CreolIO.mli  CreolLex.mli  CreolLexer.mli  CreolLexer.mll  CreolParser.mly  CreolTokens.mly  CreolTyping.ml  CreolTyping.mli  Driver.m4  Driver.ml  Lexer.mli  Lexer.mll  Makefile.am  Messages.ml  Misc.ml  Parser.mly  Passes.m4  Passes.ml  Passes.mli  README  TreeBury.ml  TreeDataflow.ml  TreeDef.ml  TreeDevirt.ml  (+21 more)
info/: Makefile.am  bibliography.texi  bugs.texi  cmc.texi  cmcgrammar.texi  creol.texi  creolc.texi  creolcls.texi  creolcomm.texi  creolcomp.texi  creolexpr.texi  creolflow.texi  creollib.texi  creolmc.texi  creolrt.texi  creolshell.texi  creoltools.texi  creoltut.texi  creolupdc.texi  faq.texi  fdl.texi  gpl.texi  grammar.texi  install.texi  introduction.texi  invocation.texi  pragma.texi  readme.texi  sorts.dot  sorts.txt  types.dot  types.txt
isabelle/: AUTHORS  IsaMakefile  Makefile.am  NEWS  README  configure.ac
isabelle/Creol/: Creol.thy  ROOT.ML
share/: Makefile.am  README  class-id.m4  configuration.m4  configuration2.m4  creol-datatypes.maude  creol-loopmode.maude  creol-metaexec.maude  creol.xsd  datatypes.maude  evaluation.m4  inherits.m4  interpreter.m4  interpreter.maude  logging.m4  machine.m4  macros.m4  methods.m4  modelchecker.maude  object-id.m4  predicates.m4  prelude.creol  prelude.m4  process.m4  rename.m4  replace.m4  signature.maude  statements.m4  subst-2-2.m4  subst.m4  symbolic.m4
tests/: Alarmclock.creol  Alarmclock.expected  Alarmclock.maude  Alarmclock.out  AsyncLCR.creol  AsyncLCR.expected  AsyncLCR.maude  AsyncLCR.out  AsyncSieveBuggy.creol  AsyncSieveBuggy.maude  AsyncSieveBuggy.out  AsyncSieveBuggyDemo.maude  AsyncSieveBuggyTest.maude  AuthorisationPolicies.creol  AwaitDeadlock.creol  AwaitWeirdness.creol  BoundedBuffer.creol  BoundedBuffer.expected  BoundedBuffer.maude  BoundedBuffer.out  Datatypes.expected  Datatypes.maude  Datatypes.out  Deadlock.creol  Deadlock.expected  Deadlock.maude  Deadlock.out  Diamond.creol  Diamond.maude  Diamond.out  Fibonacci.creol  Fibonacci.expected  Fibonacci.maude  Fibonacci.out  Hello-pp1.creol  Inheritance.creol  Inheritance.maude  Inheritance.out  Interleave.creol  Interleave.maude  (+62 more)
tests/bury/: Assign.creol  Assign.xml  If.creol  If.xml
tests/devirt/: Devirt.creol  Devirt.xml
tests/examples/: Alarmclock.creol  Alarmclock.maude  Alarmclock.out  AsyncLCR.creol  AsyncLCR.maude  AsyncLCR.out  AsyncSieve.creol  AsyncSieve.maude  AsyncSieve.out  AsyncSieveBuggy.creol  AsyncSieveBuggy.maude  AsyncSieveBuggy.out  AuthorisationPolicies.creol  AuthorisationPolicies.maude  AuthorisationPolicies.out  BoundedBuffer.creol  BoundedBuffer.maude  BoundedBuffer.out  Buffer.creol  Buffer.maude  Buffer.out  CallAll.creol  CallAll.maude  CallAll.out  DiscreteTimeout.creol  DiscreteTimeout.maude  DiscreteTimeout.out  Fibonacci.creol  Fibonacci.maude  Fibonacci.out  Hello.creol  Hello.maude  Hello.out  HollywoodBuffer.creol  HollywoodBuffer.maude  HollywoodBuffer.out  PeerToPeer.creol  PeerToPeer.maude  PeerToPeer.out  PetersonLeader-cmc.out  (+23 more)
tests/free/: Async.creol  Async.xml  AsyncAnon.creol  AsyncAnon.xml  AsyncAwait.creol  AsyncAwait.xml  AsyncAwaitRepl.creol  AsyncAwaitRepl.xml  AsyncChoice.creol  AsyncChoice.xml  AsyncRepl.creol  AsyncRepl.xml  Choice.creol  Choice.xml  FirstOrder.creol  If.creol  If.xml  Leak.creol  LocalAsync.creol  LocalAsync.xml
tests/into-ssa/: Assign.creol  Assign.xml
tests/language/: AwaitDeadlock.creol  AwaitWeirdness.creol  Contracts.creol  Deadlock.creol  Deadlock.maude  Deadlock.out  Diamond.creol  Diamond.maude  Diamond.out  Float.creol  Float.maude  Float.out  Inheritance.creol  Inheritance.maude  Inheritance.out  Init.creol  Init.maude  Init.out  Init2.creol  Init2.maude  Init2.out  Init3.creol  Init3.maude  Init3.out  Interleave.creol  Interleave.maude  Map.creol  Map.maude  Map.out  MultiCast.creol  MultiCast.maude  MultiCast.out  MutRec.creol  MutRec.maude  MutRec.out  MutRec2.creol  MutRec2.maude  MutRec2.out  Pair.creol  Pair.maude  (+13 more)
tests/modelchecker/: MC3Phil.maude  MC3Phil.out  MC4Phil.creol  MC5Phil.maude  MC5PhilTest.maude  ModelChecker.maude  ModelChecker.out
tests/profiling/: Makefile.am  Philosophers.creol  Philosophers.tests  benchmark.sh  generate.sh
tests/simulation/: Hello.creol  Hello.maude  Hello.out  Simple.creol  Simple.maude  Simple.out  Simple2.creol  Simple2.maude  Simple2.out  Simple3.creol  Simple3.maude  Simple3.out  SingleStep.maude  Transitions.maude  Transitions.out  passparams.maude  passparams.out  program.creol  program.maude  program.out
tests/split-ass/: Assign.creol  Assign.xml
tests/syntax/: AttrDecl.creol  MissingEnd.creol  MissingEnd2.creol  MissingEnd3.creol  MissingEnd4.creol  MissingEnd5.creol  StrayChar.creol
tests/tailcall/: StaticTail.creol  StaticTail.xml  Tailcall.creol  Tailcall.xml
tests/typecheck/: Ambiguous.creol  Ambiguous2.creol  Ambiguous3.creol  Ambiguous4.creol  Ambiguous5.creol  Ambiguous6.creol  Ambiguous7.creol  Ambiguous8.creol  Constant.creol  Constant1.creol  Contracts.creol  Cyclic.creol  Cyclic2.creol  Cyclic3.creol  Cyclic4.creol  CyclicClass.creol  ExprFailure.creol  Future.creol  Future2.creol  (+35 more)
units/: CreolTests.ml  Makefile.am  UnitTests.ml  UpdateDependTests.ml  testsuite.at
xml/: Makefile.am  NEWS  README-alpha  XmlTextWriter.ml  configure.ac  xml_helpers.h  xmlr_stubs.c  xmlw_stubs.c
(+62 files in other folders)
